--- a/webApp/index.html
+++ b/webApp/index.html
@@ -30,7 +30,7 @@
 						<img data-bind="myImg" alt="" />
 					</figure>
 
-					<p data-bind="description"></p>
+					<p data-bind="plot"></p>
 				</article>
 			</section>
 		</main>
@@ -47,9 +47,9 @@
         <script src="static/js/vendor/xhr.js"></script>
         <script src="static/js/vendor/routie.min.js"></script>
         <script src="static/js/vendor/transparancy.min.js"></script>
-        <script src="static/js/app.js"></script>
+        <script src="static/js/movies.js"></script>        
         <script src="static/js/content.js"></script>
-        <script src="static/js/module.js"></script>
+        <script src="static/js/app.js"></script>
         
     </body>
 </html>
