add pubsub for cleaner code

--- a/webApp/index.html
+++ b/webApp/index.html
@@ -47,6 +47,7 @@
         <script src="static/js/vendor/xhr.js"></script>
         <script src="static/js/vendor/routie.min.js"></script>
         <script src="static/js/vendor/transparancy.min.js"></script>
+        <script src="static/js/vendor/shotgun.min.js"></script>
         <script src="static/js/movies.js"></script>        
         <script src="static/js/content.js"></script>
         <script src="static/js/app.js"></script>
