set about page parameters in separate javascript file, add derectives to movie.js

--- a/webApp/index.html
+++ b/webApp/index.html
@@ -10,14 +10,13 @@
     <body>
 		<main>
 
-			<section class="content about" class="">
-				<section>
+			<section class="content about" class="">			
 					<header>
 						<h1 data-bind="title"></h1>
 
 						<p data-bind="myHtml"></p>
 					</header>
-				</section>
+				
 			</section>
 
 			<section class="content movies" class="">	
@@ -64,7 +63,7 @@
         <script src="static/js/vendor/transparancy.min.js"></script>
         <script src="static/js/vendor/shotgun.min.js"></script>
         <script src="static/js/movies.js"></script>        
-        <script src="static/js/content.js"></script>
+        <script src="static/js/about.js"></script>
         <script src="static/js/app.js"></script>
         
     </body>
